--- a/index.html
+++ b/index.html
@@ -96,11 +96,14 @@
                 
                 // Agregar eventos de ejemplo
                 const eventosMuestra = [
-                    [15, currentMonth, currentYear, true],
-                    [20, currentMonth, currentYear, false],
-                    [20, currentMonth, currentYear, true],
-                    [4, 9, 2025, true],
-                    [10, 10, 2025, false]
+                    [12, 9, 2025, false],
+                    [18, 9, 2025, true],
+                    [18, 9, 2025, false],
+                    [25, 9, 2025, true],
+                    [1, 10, 2025, false],
+                    [15, 10, 2025, true],
+                    [29, 10, 2025, true],
+                    [13, 11, 2025, true]
                 ];
                 
                 eventosMuestra.forEach((evento, index) => {
