--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
         <header>
             <h1>Calendario de Apartados</h1>
-            <p class="subtitle">Control de apartados SUM y Asadores - Solo modo visualización</p>
+            <p class="subtitle">Control de apartados SUM y Asadores - Solo consulta</p>
         </header>
         
         <div class="calendar-container">
