--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                     [1, 10, 2025, false],
                     [15, 10, 2025, true],
                     [29, 10, 2025, true],
-                    [13, 11, 2025, true]
+                    [7, 11, 2025, true],
+					[13, 11, 2025, true]
                 ];
                 
                 eventosMuestra.forEach((evento, index) => {
