--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                 
                 // Agregar eventos de ejemplo
                 const eventosMuestra = [
+					[18, 9, 2025, true],
 					[18, 9, 2025, false],
 					[25, 9, 2025, true],
 					[1, 10, 2025, false],
