--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                 // Agregar eventos de ejemplo
                 const eventosMuestra = [
 					[12, 9, 2025, false],
+					[17, 9, 2025, true],
 					[18, 9, 2025, true],
 					[18, 9, 2025, false],
 					[25, 9, 2025, true],
