--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
 					[8, 10, 2025, true],
 					[15, 10, 2025, true],
 					[29, 10, 2025, true],
+					[6, 11, 2025, true],
 					[7, 11, 2025, true],
-					[13, 11, 2025, true]
+					[13, 11, 2025, true],
                 ];
                 
                 eventosMuestra.forEach((evento, index) => {
