Update payment and event information in index.html
Added payment verification and event participation details.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
                   <br>- <span style="color:#2196F3;font-weight:bold">Azul:</span> Apartado Asadores
                 </p>
 			    <p>Les recordamos que los costos son; <span style="color:#4CAF50;font-weight:bold">SUM</span> $1,500.00 M.N. y <span style="color:#2196F3;font-weight:bold">Asadores</span> $1,000.00 M.N., el aforo permitido es de <span style="color:#4CAF50;font-weight:bold">100</span> y <span style="color:#2196F3;font-weight:bold">25</span> respectivamente</p>
+				<p>Antes de realizar el pago, favor de verificar lo siguiente ✅:</p>
+				<p>💰 No tener adeudos pendientes, revisando previamente su estado de cuenta.</p>
+				<p>📋 No aparecer en el último reporte de adeudos o morosidad; en caso de aparecer, deberán regularizar su situación antes de solicitar la reservación.</p>
+				<p>🎉 Todo condómino tiene derecho a dos eventos por amenidad por año calendario.Si ya alcanzaron el límite, podrán solicitar su inclusión en una lista de espera, disponible 30 días naturales antes de la fecha deseada.</p>
             </div>
         </div>
     </div>
