Add note about reservation advance notice

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 				<p>Antes de realizar el pago, favor de verificar lo siguiente ✅:</p>
 				<p>💰 No tener adeudos pendientes, revisando previamente su estado de cuenta.</p>
 				<p>📋 No aparecer en el último reporte de adeudos o morosidad; en caso de aparecer, deberán regularizar su situación antes de solicitar la reservación.</p>
+				<p>📅 Solo se puede apartar con dos meses máximo de anticipación.</p>
 				<p>🎉 Todo condómino tiene derecho a dos eventos por amenidad por año calendario.Si ya alcanzaron el límite, podrán solicitar su inclusión en una lista de espera, disponible 30 días naturales antes de la fecha deseada.</p>
             </div>
         </div>
