--- a/index.html
+++ b/index.html
@@ -102,14 +102,15 @@
                 const eventosMuestra = [
 					[25, 9, 2025, true],
 					[1, 10, 2025, false],
+					[2, 10, 2025, false],
 					[8, 10, 2025, true],
 					[15, 10, 2025, true],
 					[29, 10, 2025, true],
+					[29, 10, 2025, false],
 					[6, 11, 2025, true],
 					[7, 11, 2025, true],
-					[13, 11, 2025, true],
+					[13, 11, 2025, true]
                 ];
-                
                 eventosMuestra.forEach((evento, index) => {
                     setTimeout(() => apartado(evento), 100 * (index + 1));
                 });
