--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 const eventosMuestra = [
 				[25, 9, 2025, true],
 				[1, 10, 2025, false],
-				[2, 10, 2025, false],
+				[2, 10, 2025, true],
 				[8, 10, 2025, true],
 				[9, 10, 2025, true],
 				[15, 10, 2025, true],
