--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
 				[29, 10, 2025, false],
 				[6, 11, 2025, true],
 				[7, 11, 2025, true],
-				[13, 11, 2025, true]
+				[12, 11, 2025, true],
+				[13, 11, 2025, true],
                 ];
                 eventosMuestra.forEach((evento, index) => {
                     setTimeout(() => apartado(evento), 100 * (index + 1));
