Add sample events to index.html

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                 
                 // Agregar eventos de ejemplo
                 const eventosMuestra = [
+				[24, 9, 2025, false],
 				[25, 9, 2025, true],
 				[1, 10, 2025, false],
 				[2, 10, 2025, true],
