Add new event date to eventosMuestra array

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 				[24, 9, 2025, false],
 				[25, 9, 2025, true],
 				[1, 10, 2025, false],
+				[1, 10, 2025, true],
 				[2, 10, 2025, true],
 				[8, 10, 2025, true],
 				[9, 10, 2025, true],
