--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 				[7, 11, 2025, true],
 				[12, 11, 2025, true],
 				[13, 11, 2025, true],
+				[14, 11, 2025, true],
                 ];
                 eventosMuestra.forEach((evento, index) => {
                     setTimeout(() => apartado(evento), 100 * (index + 1));
