--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 				[9, 10, 2025, true],
 				[15, 10, 2025, true],
 				[29, 10, 2025, true],
+				[29, 10, 2025, true],
 				[29, 10, 2025, false],
 				[6, 11, 2025, true],
 				[7, 11, 2025, true],
